@@ -1,3 +1,6 @@
+* Sat Sep 17 2022 Trevor Vaughan <trevor@sicura.us> - 6.7.0
+- Added support for Amazon Linux 2
+
 * Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.6.0
 - Update from camptocamp/systemd to puppet/systemd
 
